--- a/layouts/partials/sections/gallery/vimeo.html
+++ b/layouts/partials/sections/gallery/vimeo.html
@@ -1,6 +1,6 @@
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-        src="https://player.vimeo.com/video/{{ .Params.vimeo_id }}?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;byline=false&amp;portrait=false&amp;title=false&amp;autoplay=0&amp;loop=0&amp;muted=0&amp;playsinline=1&amp;controls=1&amp;background=0&amp;vimeo_logo=0"
-        frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
-        style="position:absolute;top:0;left:0;width:100%;height:100%;"
-        title="Michael Medaglia Director's Reel"></iframe></div>
+                src="https://player.vimeo.com/video/{{ .Params.vimeo_id }}?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;byline=false&amp;portrait=false&amp;title=false&amp;autoplay=0&amp;loop=0&amp;muted=0&amp;playsinline=false&amp;controls=1&amp;background=0&amp;vimeo_logo=0"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
+                style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                title="Michael Medaglia Director's Reel"></iframe></div>
 <script src="https://player.vimeo.com/api/player.js"></script>
